[package]
name = "oxc_ecmascript"
version = "0.31.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
test = true
doctest = false

[dependencies]
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true, features = ["to_js_string"] }

num-bigint = { workspace = true }
num-traits = { workspace = true }

[features]
default = []
side_effects = []
constant_evaluation = ["side_effects"]
