[package]
name = "oxc_ecmascript"
version = "0.137.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
test = true
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_regular_expression = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true, features = ["to_js_string"] }

cow-utils = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
# Catch usage of old `AstBuilder` APIs in tests, without affecting downstream consumers.
# if we enabled `disable_old_builder` feature in main dependency, feature unification would
# cause it to be activated for `oxc_ast` for the user too.
oxc_ast = { workspace = true, features = ["disable_old_builder"] }
