[package]
name = "oxc_estree"
version = "0.51.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
itoa = { workspace = true }
ryu-js = { workspace = true, optional = true }

[features]
default = []
serialize = ["dep:ryu-js"]
