[package]
name = "oxc_estree"
version = "0.80.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_data_structures = { workspace = true, features = ["code_buffer", "pointer_ext", "slice_iter_ext", "stack"], optional = true }

itoa = { workspace = true, optional = true }
ryu-js = { workspace = true, optional = true }

[features]
default = []
serialize = ["dep:oxc_data_structures", "dep:itoa", "dep:ryu-js"]
