[package]
name = "oxc_estree"
version = "0.102.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_data_structures = { workspace = true, features = ["code_buffer", "slice_iter", "stack"], optional = true }

dragonbox_ecma = { workspace = true, optional = true }
itoa = { workspace = true, optional = true }

[features]
default = []
serialize = ["dep:oxc_data_structures", "dep:itoa", "dep:dragonbox_ecma"]
