[package]
name = "oxc_estree_tokens"
version = "0.140.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../../README.md"
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true, features = ["serialize"] }
oxc_data_structures = { workspace = true, features = ["assert_unchecked"] }
oxc_estree = { workspace = true, features = ["serialize"] }
oxc_parser = { workspace = true, features = ["mutate_tokens"] }
oxc_span = { workspace = true, features = ["serialize"] }
itoa = { workspace = true }

[dev-dependencies]
# Catch usage of old `AstBuilder` APIs in tests, without affecting downstream consumers.
# If we enabled `disable_old_builder` feature in main dependency, feature unification would
# cause it to be activated for `oxc_ast` for the user too.
oxc_ast = { workspace = true, features = ["disable_old_builder"] }
