[package]
name = "oxc_eval"
version = "0.27.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
oxc_ast = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_span = { workspace = true }

[lints]
workspace = true
