[package]
name = "oxc_formatter"
version = "0.31.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/examples", "/src"]
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_data_structures = { workspace = true, features = ["stack", "code_buffer"] }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true, optional = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

cow-utils = { workspace = true }
fast-glob = { workspace = true }
natord = { workspace = true }
nodejs-built-in-modules = { workspace = true }
phf = { workspace = true, features = ["macros"] }
rustc-hash = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
oxc_tasks_common = { workspace = true }
pico-args = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
oxc_span = { workspace = true }

[features]
default = []
detect_code_removal = ["dep:oxc_semantic"]
