[package]
name = "oxc_formatter"
version = "0.58.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/examples", "/src"]
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_formatter_core = { workspace = true }
oxc_jsdoc = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true, optional = true }
oxc_span = { workspace = true }
oxc_str = { workspace = true }
oxc_syntax = { workspace = true }

cow-utils = { workspace = true }
fast-glob = { workspace = true }
markdown = { workspace = true }
natord = { workspace = true }
nodejs-built-in-modules = { workspace = true }
itoa = { workspace = true }
phf = { workspace = true, features = ["macros"] }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
oxc_formatter_core = { workspace = true, features = ["test_harness"] }
oxc_tasks_common = { workspace = true }
pico-args = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Catch usage of old `AstBuilder` APIs in tests, without affecting downstream consumers.
# If we enabled `disable_old_builder` feature in main dependency, feature unification would
# cause it to be activated for `oxc_ast` for the user too.
oxc_ast = { workspace = true, features = ["disable_old_builder"] }

[build-dependencies]
oxc_formatter_core = { workspace = true, features = ["test_harness"] }

[features]
default = []
detect_code_removal = ["dep:oxc_semantic"]

[lib]
doctest = false
