[package]
name = "oxc_formatter_core"
version = "0.50.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_data_structures = { workspace = true, features = ["code_buffer"] }
oxc_span = { workspace = true }

rustc-hash = { workspace = true }
unicode-width = { workspace = true }

[lib]
doctest = false
