[package]
name = "oxc_formatter_graphql"
version = "0.59.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
oxc-graphql-parser = { workspace = true }
cow-utils = { workspace = true }
oxc_allocator = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_formatter_core = { workspace = true }
oxc_span = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
oxc_formatter_core = { workspace = true, features = ["test_harness"] }
oxc_tasks_common = { workspace = true }
pico-args = { workspace = true }

[build-dependencies]
oxc_formatter_core = { workspace = true, features = ["test_harness"] }

[lib]
doctest = false
